--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-flexbox-grid": "^2.1.2",
+    "react-qr-reader": "^2.1.0",
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
